--- a/index.html
+++ b/index.html
@@ -24,8 +24,22 @@
     <!-- Theme CSS -->
     <link rel="stylesheet" href="./src/assets/css/theme.min.css" />
   </head>
-  <body>
+  <body data-bs-theme="dark"></body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="./src/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./src/assets/libs/simplebar/dist/simplebar.min.js"></script>
+<script src="./src/assets/libs/headhesive/dist/headhesive.min.js"></script>
+
+<!-- Theme JS -->
+<script src="./src/assets/js/theme.min.js"></script>
+
+      <script src="./src/assets/js/vendors/partical.js"></script>
+      <script src="./src/assets/libs/embla-carousel/embla-carousel.umd.js"></script>
+      <script src="./src/assets/libs/embla-carousel-auto-scroll/embla-carousel-auto-scroll.umd.js"></script>
+      <script src="./src/assets/js/vendors/embla.js"></script>
+      <script src="./src/assets/libs/scrollcue/scrollCue.min.js"></script>
+      <script src="./src/assets/js/vendors/scrollcue.js"></script>
+      <script src="./src/assets/js/vendors/partical.js"></script>
   </body>
 </html>
