--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MicroAgent Ai</title>
+    <title>MicroAgent</title>
     <!-- Libs CSS -->
     <link
       href="./src/assets/libs/simplebar/dist/simplebar.min.css"
